# ml-pipelines

./: LICENSE  README.md  pyproject.toml
eval/pipe/: eval.py
ml_pipelines/eval/: eval.py
ml_pipelines/train/: train.py
tests/: test_end_to_end.py
train/: pyproject.toml
train/pipe/: train.py
