[tool.poetry]
name = "ml-pipelines"
version = "0.1.0"
description = "A sandbox for playing with ML pipelines in the cloud"
authors = ["Adrian Zuur <adrianzuur@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_pipelines"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
