[tool.poetry]
name = "ml-pipelines"
version = "0.1.0"
description = "Sandbox for playing with ML pipelines"
authors = ["Adrian Zuur <adrianzuur@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "ml_pipelines"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"

[tool.poetry.group.eval.dependencies]
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"