[tool.poetry]
name = "train"
version = "0.1.0"
description = "Training pipeline"
authors = ["Adrian Zuur <adrianzuur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
